// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover mount popover 1`] = `
<Popover
  editorRef={
    Object {
      "getBoundingClientRect": [Function],
    }
  }
  onKeyDown={[MockFunction]}
  onMouseLeave={[MockFunction]}
  onPopoverCoords={[Function]}
  targetPosition={
    Object {
      "bottom": 0,
      "height": 300,
      "left": 200,
      "right": 0,
      "top": 50,
      "width": 300,
      "x": 100,
      "y": 200,
    }
  }
  type="popover"
>
  <div
    className="popover orientation-right"
    onKeyDown={[MockFunction]}
    onMouseLeave={[MockFunction]}
    style={
      Object {
        "left": 505,
        "top": 250,
      }
    }
  >
    <BracketArrow
      left={-9}
      orientation="left"
      top={-202}
    >
      <div
        className="bracket-arrow left"
        style={
          Object {
            "bottom": undefined,
            "left": -9,
            "top": -202,
          }
        }
      />
    </BracketArrow>
    <div
      className="gap"
      key="gap"
    />
    <h1>
      Poppy!
    </h1>
  </div>
</Popover>
`;

exports[`Popover mount tooltip 1`] = `
<Popover
  editorRef={
    Object {
      "getBoundingClientRect": [Function],
    }
  }
  onKeyDown={[MockFunction]}
  onMouseLeave={[MockFunction]}
  onPopoverCoords={[Function]}
  targetPosition={
    Object {
      "bottom": 0,
      "height": 300,
      "left": 200,
      "right": 0,
      "top": 50,
      "width": 300,
      "x": 100,
      "y": 200,
    }
  }
  type="tooltip"
>
  <div
    className="tooltip"
    onKeyDown={[MockFunction]}
    onMouseLeave={[MockFunction]}
    style={
      Object {
        "left": -8,
        "top": 0,
      }
    }
  >
    <div
      className="gap"
      key="gap"
    />
    <h1>
      Toolie!
    </h1>
  </div>
</Popover>
`;

exports[`Popover render (tooltip) 1`] = `
<div
  className="tooltip"
  onKeyDown={[MockFunction]}
  onMouseLeave={[MockFunction]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
>
  <div
    className="gap"
    key="gap"
  />
  <h1>
    Toolie!
  </h1>
</div>
`;

exports[`Popover render 1`] = `
<Popover
  editorRef={
    Object {
      "getBoundingClientRect": [Function],
    }
  }
  onKeyDown={[MockFunction]}
  onMouseLeave={[MockFunction]}
  onPopoverCoords={[Function]}
  targetPosition={
    Object {
      "bottom": 0,
      "height": 300,
      "left": 200,
      "right": 0,
      "top": 50,
      "width": 300,
      "x": 100,
      "y": 200,
    }
  }
  type="popover"
>
  <div
    className="popover orientation-right"
    onKeyDown={[MockFunction]}
    onMouseLeave={[MockFunction]}
    style={
      Object {
        "left": 505,
        "top": 250,
      }
    }
  >
    <BracketArrow
      left={-9}
      orientation="left"
      top={-202}
    >
      <div
        className="bracket-arrow left"
        style={
          Object {
            "bottom": undefined,
            "left": -9,
            "top": -202,
          }
        }
      />
    </BracketArrow>
    <div
      className="gap"
      key="gap"
    />
    <h1>
      Poppy!
    </h1>
  </div>
</Popover>
`;
